--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -1,15 +1,133 @@
-<h1>Doğukan ARS</h1>
-<!-- Hakkımda bölümü baş -->
-<h3>About Me</h3>
-<p>Hello, I'm Doğukan. I live in Antalya. I just graduated from Metallurgical and Materials Engineer. I like listening to music also playing guitar, piano and flute, watching sci-fi, fantastical, drama movies and lots of animes. I interest about coding and I want to improve my coding skills with Patika.dev.</p>
-<!-- Hakkımda bölümü son -->
-<!-- İzlemeyi sevdiklerim baş -->
-<h2>Like to Watch</h2>
-<h3>Lord of the Rings</h3>
-<p>"It began with the forging of the Great Rings. Three were given to the Elves; immortal, wisest and fairest of all beings. Seven to the Dwarf Lords; great miners and craftsmen of the mountain halls. And nine. Nine rings were gifted to the race of Men; who, above all else, desire power.<br>
-For within these rings was bound a strength and will to govern each race.<br>
-But they were, all of them decieved, for another Ring was made. <br>
-In the land of Mordor, in the fires of Mount Doom, the Dark Lord Sauron forged in secret a master ring to control all others.<br>
-And into this ring he poured his cruelty, his malice and his will to dominate all life.<br>
-'ONE RING TO RULE THEM ALL...'"</p>
-<!-- İzlemeyi sevdiklerim son -->
+<!-- Style section start -->
+
+<style>
+    #page{
+        display: grid;
+    }
+    div{
+        border-style: double;
+        border-radius: 20px;
+        border-color: rgb(224, 167, 98);
+    }
+    h1,h2{
+        font-size: 40px;
+        padding: 0px 20px;
+        margin: 20px;
+        font-style: oblique;
+        color: rgba(159, 17, 17, 0.593);
+    }      
+    h3{
+        font-size: 30px;
+        margin: 20px;
+        padding: 0px 15px;
+        color: rgba(0, 0, 0, 0.764);
+    }
+    p{
+        font-size: 20px;
+        text-indent: 25px;
+        padding: 0px 20px;
+        margin: 20px;
+    }
+    #navmenu{
+        font-size: 20px; 
+        color: rgb(159, 135, 182);
+        margin: inherit;
+        padding: 10px 20px;
+        position: absolute;
+        right: 0px;
+    }
+    #nav{
+        margin: inherit;
+        position: absolute;
+        padding: 40px 50px;
+        right: 0px;
+    }
+    #intlist{
+        margin: inherit;
+        padding: 20px 70px;
+        font-size: 25px;
+        color: rgba(157, 102, 1, 0.99);
+    }
+</style>
+<!-- Style section end -->
+
+<div id="page">
+    <h1>Doğukan ARS</h1>
+
+    <!-- Navigation menu start -->
+    <h2 id="navmenu">Navigation Menu</h2>    
+    <ul id="nav">
+        <li><a href="#aboutme">About Me</a></li>
+        <li><a href="#int">Interests</a></li>
+        <li><a href="#ltw">Like to Watch</a></li>        
+    </ul>
+    <!-- Navigation menu end -->
+
+    <!-- About me start -->
+    <h2 id="aboutme">About Me</h2>
+   
+    <p>Hello, I'm Doğukan. I live in Antalya. I just graduated from <strong><em> Metallurgical and Materials Engineer.</em></strong> I like listening to music also playing <em>guitar</em>, <em>piano</em> and <em>flute</em>, watching <em>sci-fi</em>, <em>fantastical</em>, <em>drama</em> movies and lots of <em>animes</em>. I interest about coding and I want to improve my coding skills with <a href="https://www.patika.dev/tr" target="_blank"><strong>Patika.dev</strong></a>. And also I added my github profile <a href="https://github.com/Drynwhyll" target="_blank"><strong>HERE</strong></a> , therefore you can contact with me if you want to talk about my project or about codes, we can share our knowledge together. Thanks in advance for everyone, especially who helps me to get better :) </p>
+    <!-- About me end -->
+
+    <!-- Interests start -->
+    <h2 id="int">Interests</h2>
+
+    <!-- ol>li>ul>li*3^li>ul>li*3^li>ul>li*5^li>ul>li*3^li>ul>li*1 -->
+    
+    <ol id="intlist">
+        <li>Film
+            <ul style="font-style: italic;">
+                <li>Lord of the Rings Trilogy</li>
+                <li>Harry Potter</li>
+                <li><a href="https://www.imdb.com/title/tt0816692/" target="_blank">Interstellar</a></li>
+            </ul style="font-style: italic;">
+            <li>Series
+                <ul style="font-style: italic;">
+                    <li><a href="https://www.imdb.com/title/tt1475582/?ref_=nv_sr_srsg_0" target="_blank">Sherlock</a></li>
+                    <li>Spartacus</li>
+                    <li>Vikings</li>
+                </ul >
+                <li>Animes
+                    <ul style="font-style: italic;">
+                        <li><a href="https://www.imdb.com/title/tt0434665/?ref_=nv_sr_srsg_0" target="_blank">Bleach</a></li>
+                        <li>Naruto</li>
+                        <li>Kuroko no Basket</li>
+                        <li>Shigatsu wa Kimi no Uso</li>
+                        <li>Shokugeki no Souma</li>
+                    </ul>
+                    <li>Music Genres
+                        <ul style="font-style: italic;">
+                            <li>Metal Music</li>
+                            <li>Alternatives</li>
+                            <li>Classical Music</li>
+                        </ul>
+                        <li>Book
+                            <ul>
+                                <li><a href="https://www.goodreads.com/book/show/13538608-chopin?from_search=true&from_srp=true&qid=jWzoXIRQZK&rank=1" target="_blank">Chopin: Tuslara Adanmis Bir Yasam</a></li>
+                            </ul>
+                        </li>
+                    </li>
+                </li>
+            </li>
+        </li>
+    </ol>
+    <!-- Interests end -->
+
+    <!-- Like to watch start -->
+    <h2 id="ltw">Like to Watch</h2>
+    <h3>Lord of the Rings Trilogy</h3>
+    <p>"It began with the forging of the Great Rings. Three were given to the Elves; immortal, wisest and fairest of all beings. Seven to the Dwarf Lords; great miners and craftsmen of the mountain halls. And nine. Nine rings were gifted to the race of Men; who, above all else, desire power.
+    <br>
+    For within these rings was bound a strength and will to govern each race.
+    <br>
+    But they were, all of them decieved, for another Ring was made.<br>
+    In the land of Mordor, in the fires of Mount Doom, the Dark Lord Sauron forged in secret a master ring to control all others.
+    <br>
+    And into this ring he poured his cruelty, his malice and his will to dominate all life.</p>
+    <p style="margin: auto; font-size: 28px; color: rgb(183, 173, 57);"><strong><em>'ONE RING TO RULE THEM ALL...'</em></strong></p>
+    <img src="Pictures/LotR-Trilogy.jpg" alt="Lord of the Rings Trilogy Cover" title="Lord of the Rings Trilogy Cover" width="700" style="margin: auto;">
+    <!-- Like to watch end -->
+            
+    <br>
+    <h4 style="padding: 5px 20px; margin: inherit;"><a href="#page">Go to top of page</a></h4>
+</div>
